# mcp-tcl-udf-server

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY_SETUP.md  build.rs  test.sh  test_exec_tool.sh  test_mcp.py  test_mcp_tools.py  test_namespace.py  vercel.json
api/: Cargo.toml  index.rs
docs/: BIN_EXEC_TOOL.md  CAPABILITY_REPORTING.md  MCP_CAPABILITY_EXTENSIONS.md  MCP_INTEGRATION_GUIDE.md  RUNTIME_ABSTRACTION.md
memory/: claude-flow-data.json
memory/agents/: README.md
memory/sessions/: README.md
src/: auth.rs  capabilities.rs  http_server.rs  lib.rs  main.rs  main_http.rs  namespace.rs  persistence.rs  server.rs  server_enhanced.rs  tcl_executor.rs  tcl_runtime.rs  tcl_tools.rs  tool_discovery.rs
src/tcl_runtime/: molt_runtime.rs  tcl_interpreter.rs
tests/: README.md  feature_tests.rs  run_bin_exec_tool_tests.sh  runtime_selection_tests.rs  test_bin_exec_tool.tcl  test_bin_exec_tool_mcp.py  test_capabilities.py
tests/examples/: bin_exec_tool_examples.md
tests/fixtures/: sample_tools.json
tests/integration/: test_bin_exec_tool_integration.rs  test_runtime_abstraction.rs
tests/unit/: test_bin_exec_tool.rs  test_tcl_runtime.rs
