[package]
name = "tcl-mcp-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# TCL interpreter
molt = "0.3"

# MCP Protocol schema
rust-mcp-schema = "0.1"

# JSON-RPC implementation (since rmcp requires unstable features)
jsonrpc-core = "18.0"

# Schema generation for tool parameters
schemars = "0.8"

# Async runtime (still needed by rmcp)
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For dynamic tool management
dashmap = "5.5"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Cross-platform directories
dirs = "5.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
# For testing with temporary directories
tempfile = "3.0"

[[bin]]
name = "tcl-mcp-server"
path = "src/main.rs"